# bot-discord

./: .dockerignore  .env  .env copy  .env-semple  .env_exemplo  .gitignore  .tool-versions  Dockerfile  README.md  comomeusar.md  database.db  explicativo.md  explicativo.txt  fly.toml  irritartoninho.py  main copy.py  main.py  main2.py  pyproject.toml  requirements.txt  startup.py
app/config/: conector_discord.py  config.py
app/database/: session.py
app/funcoes/: alertas.py  comandos.py  comandos_basicos.py  comandos_config_canal.py  comandos_dm.py  comandos_extras.py  comandos_mencoes.py  dados.py
app/models/: bot_models.py
bot/: legado.py  main.py  main1.py  main2.py
bot/config/: conector_discord.py  config.py
bot/funcoes/: alertas.py  comandos.py  comandos_basicos.py  comandos_config_canal.py  comandos_dm.py  comandos_mencoes.py  dados.py  mensagens.py
config/: base_model.py  conector_discord.py  config.py  jsonencodeddict.py
database/: bot_models.py
funcoes/: alertas.py  comandos.py  comandos_basicos.py  comandos_config_canal.py  comandos_dm.py  comandos_extras.py  comandos_mencoes.py  mensagens.py
migrations/: env.py
migrations/versions/: 21beec2d9cd7_bigbang_bot.py  517d2ef83011_bigbang.py  9981f30cafcf_bigbang_config_models.py  bf5e3002e68a_bigbang_bot_models.py  e01cbed7ad69_mudança_de_tipo_datatime_para_str.py
tests/: conftest.py  test_basic_commands.py  test_comandos_config_canal.py  test_comandos_dm.py  test_comandos_mencoes.py
