[tool.poetry]
name = "projeto"
version = "0.1.0"
description = ""
authors = ["jvras <jvras@cin.ufpe.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.13"
numpy = "^1.22.2"
replit = "^3.2.4"
Flask = "^2.2.0"
urllib3 = "^1.26.12"
discord = "^2.1.0"
emoji = "^2.8.0"
pandas = "^2.1.1"
openpyxl = "^3.1.2"
aiofiles = "^23.2.1"
python-dotenv = "^1.0.0"
pynput = "^1.7.6"
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"
discord-py-interactions = "^5.11.0"
pillow = "^10.2.0"
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"



[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
taskipy = "^1.12.2"
blue = "^0.9.1"
ruff = "^0.1.9"
httpx = "^0.26.0"
isort = "^5.13.2"
pytest-asyncio = "^0.23.3"

[tool.ruff]
line-length = 79
exclude = ['.venv', 'migrations']

[tool.isort]
profile = "black"
line_length = 79
extend_skip = ['migrations']

[tool.pytest.ini_options]
pythonpath = "."

[tool.blue]
extend-exclude = '(migrations/|startup.py)'


[tool.taskipy.tasks]
lint = 'ruff . && blue --check . --diff'
format = 'blue .  && isort .'
run = 'python startup.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=fast_zero -vv'
post_test = 'coverage html'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
